fix: Better styling of gaps between pages

--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -24,9 +24,7 @@
   position: relative;
   z-index: 2;
   height: 0;
-  box-shadow:
-    0 1px 3px rgba(0, 0, 0, 0.12),
-    0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.24);
 }
 
 .rte-page-break__edge-top {
@@ -46,6 +44,7 @@
   justify-content: center;
   position: relative;
   z-index: 1;
+  box-shadow: 0px 0px 0px 3px #e8e8e8;
 }
 
 /* Page number label centered in the gap */
